Add the html to structure the 'BLOGS' section of the Blogs page

--- a/blogs.html
+++ b/blogs.html
@@ -29,6 +29,25 @@
                 </ul>
             </nav>
         </header>
+
+        <!-- Evance & Akos -->
+        <div>
+            <div>BLOGS</div>
+            <div>
+                <nav>
+                    <ul>
+                        <li><a href="">All</a></li>
+                        <li><a href="">Open Source</a></li>
+                        <li><a href="">Software Engineering</a></li>
+                        <li><a href="">Latest</a></li>
+                        <li><a href="">Startup's</a></li>
+                        <li><a href="">AI</a></li>
+                        <li><a href="">Cybercaster</a></li>
+                        <li><a href="">Crypto</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </body>
 
 </html>
